[package]
name = "hcop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A rust wrapper for https://hcoptcha.online/login"
license-file = "LICENSE"
repository = "https://github.com/UwUDev/hcop/"
readme = "README.md"
keywords = ["hcop", "hcoptcha", "hcaptcha", "solver", "captcha"]
include = [
    "cargo.toml",
    "src/**",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"